# jogo-de-plataforma-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/uml/: diagrama-de-classes.uml  novo-diagrama.uml
src/: main.cpp
src/engine/Animation/: Animation.cpp  Animation.h
src/engine/CollisionManager/: CollisionManager.c  CollisionManager.cpp  CollisionManager.h
src/engine/Ente/: Ente.cpp  Ente.h
src/engine/Game/: Game.cpp  Game.h
src/engine/PhysicsComponent/: PhysicsComponent.cpp  PhysicsComponent.h
src/engine/Renderer/: Renderer.cpp  Renderer.h
src/engine/ResourceManager/: ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
src/engine/SaveManager/: SaveManager.cpp  SaveManager.h
src/engine/Scene/: Scene.h  SceneManager.cpp  SceneManager.h
src/engine/Scene/Menu/: MenuScene.cpp  MenuScene.h
src/engine/SceneManager/: Scene.h  SceneManager.cpp  SceneManager.h
src/game/Character/: Character.cpp  Character.h
src/game/Character/Enemy/: Arqueiro.cpp  (+5 more)
src/game/Entity/: Entity.cpp  Entity.h
src/game/Levels/: LeadBoard.cpp  LeadBoard.h  Phase.cpp  Phase.h  PrimeiraFase.cpp  PrimeiraFase.h  SegundaFase.cpp  SegundaFase.h  TerceiraFase.cpp  TerceiraFase.h
src/game/Menu/: Menu.cpp  Menu.h
src/game/Obstacles/: EsferaMagica.cpp  EsferaMagica.h  Espinhos.cpp  Espinhos.h  Obstacle.h  Obstacles.cpp  Plataforma.cpp  Plataforma.h
src/game/Player/: Player.cpp  Player.h
src/game/Projectile/: Projectile.cpp  Projectile.h
src/game/Projetil/: Projetil.cpp  Projetil.h
src/lists/ListaEntidades/: ListaEntidades.cpp  ListaEntidades.h
(+13 files in other folders)
